@@ -12,6 +12,7 @@ lib/Brackup.pm
 lib/Brackup/Backup.pm
 lib/Brackup/BackupStats.pm
 lib/Brackup/ChunkIterator.pm
+lib/Brackup/CompositeChunk.pm
 lib/Brackup/Config.pm
 lib/Brackup/ConfigSection.pm
 lib/Brackup/Dict/SQLite.pm
@@ -32,9 +33,13 @@ lib/Brackup/Test.pm
 Makefile.PL
 MANIFEST			This list of files
 MANIFEST.SKIP
+META.yml			Module meta-data (added by MakeMaker)
 t/00-use.t
 t/01-backup.t
 t/02-gpg.t
+t/03-combine-little-files.t
+t/data/000-dup1.txt
+t/data/000-dup2.txt
 t/data/huge-file.txt
 t/data/my-link.txt
 t/data/my_dir/sub_dir/another-file.txt
@@ -43,4 +48,3 @@ t/data/pubring-test.gpg
 t/data/secring-test.gpg
 t/data/test-file.txt
 TODO
-META.yml                                 Module meta-data (added by MakeMaker)
