@@ -10,6 +10,9 @@ use Digest::SHA1 qw(sha1_hex);
 #   backlength - memoized
 #   backdigest - memoized
 #   _chunkref  - memoized
+#   compchunk  - composite chunk, if we were added to a composite chunk
+#   compfrom   - offset in composite chunk where we start
+#   compto     - offset in composite chunk where we end
 
 sub new {
     my ($class, $pchunk) = @_;
@@ -18,16 +21,63 @@ sub new {
     return $self;
 }
 
+sub pchunk { $_[0]{pchunk} }
+
 # create the 'lite' or 'handle' version of a storedchunk.  can't get to
 # the chunkref from this, but callers aren't won't.  and we'll DIE if they
 # try to access the chunkref.
-sub new_from_inventory {
-    my ($class, $pchunk, $dig, $len) = @_;
-    return bless {
+sub new_from_inventory_value {
+    my ($class, $pchunk, $invval) = @_;
+
+    my ($dig, $len, $range) = split /\s+/, $invval;
+    
+    my $sc = bless {
         pchunk     => $pchunk,
         backdigest => $dig,
         backlength => $len,
     }, $class;
+
+    # normal
+    return $sc unless $range;
+
+    # in case of little file in a composite chunk,
+    # we gotta be a range.
+    my ($from, $to) = $range =~ /^(\d+)-(\d+)$/
+        or die "bogus range: $range";
+    $sc->{compfrom} = $from;
+    $sc->{compto}   = $to;
+    return $sc;
+}
+
+sub clone_but_for_pchunk {
+    my ($self, $pchunk) = @_;
+    my $copy = bless {}, ref $self;
+    foreach my $f (qw(backlength backdigest compchunk compfrom compto)) {
+        $copy->{$f} = $self->{$f};
+    }
+    $copy->{pchunk} = $pchunk;
+    return $copy;
+}
+
+sub set_composite_chunk {
+    my ($self, $cchunk, $from, $to) = @_;
+    $self->{compchunk} = $cchunk;
+
+    # forget our backup length/digest.  this handle information
+    # to the stored chunk should be asked of our composite
+    # chunk in the future, when it's done populating.
+    $self->{backdigest} = undef;
+    $self->{backlength} = undef;
+    $self->forget_chunkref;
+
+    $self->{compfrom}  = $from;
+    $self->{compto}    = $to;
+}
+
+sub range_in_composite {
+    my $self = shift;
+    return undef unless $self->{compfrom} || $self->{compto};
+    return "$self->{compfrom}-$self->{compto}";
 }
 
 sub file {
@@ -77,6 +127,12 @@ sub backup_digest {
 
 sub _populate_lengthdigest {
     my $self = shift;
+    if (my $cchunk = $self->{compchunk}) {
+        $self->{backlength} = $cchunk->backup_length;
+        $self->{backdigest} = $cchunk->digest;
+        return 1;
+    }
+
     my $dataref = $self->chunkref;
     $self->{backlength} = CORE::length($$dataref);
     $self->{backdigest} = "sha1:" . sha1_hex($$dataref);
@@ -120,10 +176,19 @@ sub forget_chunkref {
 sub to_meta {
     my $self = shift;
     my @parts = ($self->{pchunk}->offset,
-                 $self->{pchunk}->length,
-                 $self->backup_length,
-                 $self->backup_digest,
-                 );
+                 $self->{pchunk}->length);
+
+    if (my $range = $self->range_in_composite) {
+        push @parts, (
+                      $range,
+                      $self->backup_digest,
+                      );
+    } else {
+        push @parts, (
+                      $self->backup_length,
+                      $self->backup_digest,
+                      );
+    }
 
     # if the inventory database is lost, it should be possible to
     # recover the inventory database from the *.brackup files.
@@ -139,6 +204,27 @@ sub to_meta {
     }
 
     return join(";", @parts);
+}
+
+# aka "instructions to attach to a pchunk, on how to recover the pchunk from a target"
+sub inventory_value {
+    my $self = shift;
+
+    # when this chunk was stored as part of a composite chunk, the instructions
+    # are of form:
+    #    sha1:deadbeef 0-50
+    # which means download "sha1:deadbeef", then the contents will be in from
+    # byte offset 0 to byte offset 50 (length of 50).
+    if (my $range = $self->range_in_composite) {
+        return join(" ",
+                    $self->backup_digest,
+                    $self->backup_length,
+                    $range);
+    }
+
+    # else, the historical format:
+    #   sha1:deadbeef <length>
+    return join(" ", $self->backup_digest, $self->backup_length);
 }
 
 1;
