@@ -98,7 +98,6 @@ sub store_chunk {
     my ($self, $chunk) = @_;
     my $dig = $chunk->backup_digest;
     my $blen = $chunk->backup_length;
-    my $len = $chunk->length;
     my $chunkref = $chunk->chunkref;
 
     my $try = sub {
